css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

html,
body {
    height: 100%;
    margin: 0;
}

body {
    margin: 0;
    font-family: Roboto, sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.results-container {
    display: flex;
    justify-content: space-between;
    gap: 16px;
}

.buttons-container {
    display: flex;
    justify-content: space-between;
    gap: 16px;
    margin: 16px;
}

#player-score,
#computer-score {
    font-size: 24px;
    font-weight: bold;
}

button {
    font-size: 24px;
    padding: 8px;
    text-align: center;
}

